--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  supabase_flutter: ^2.6.0
   flutter_riverpod: ^2.5.1
   dio: ^5.7.0
   permission_handler: ^11.3.1
   path_provider: ^2.1.4
   html: ^0.15.4
   youtube_player_flutter: ^9.1.0
+  youtube_explode_dart: ^2.2.2
+  video_player: ^2.9.1
+  flutter_file_dialog: ^3.0.2
+  path: ^1.9.0
+  provider: ^6.1.2
+  saver_gallery: ^3.0.6
+  ffmpeg_kit_flutter: ^6.0.3
 
 dev_dependencies:
   flutter_test:
